chore: fix styling on mobile for create jar form

--- a/src/styles/scss/_home.scss
+++ b/src/styles/scss/_home.scss
@@ -82,7 +82,7 @@
     .current-amount {
       font-size: 2em;
       text-align: end;
-      width: 3em;
+      width: 35%;
     }
   
     .slash {
@@ -92,7 +92,7 @@
   
     .goal-amount {
       font-size: 2em;
-      width: 4em;
+      width: 40%;
     }
   }
 }
